fixed mobile case study layout bug

--- a/assets/scss/blocks/Intro.scss
+++ b/assets/scss/blocks/Intro.scss
@@ -1,3 +1,5 @@
 .intro {
-    padding-top: 90px;
+    @include sm {
+        padding-top: 90px;
+    }
 }
